--- a/app/css/app.css
+++ b/app/css/app.css
@@ -7,13 +7,25 @@ body {
   margin: 0 auto;
   max-width: 2880px;
   padding-bottom: 20px;
-  /*padding-top: 25px;*/
+  padding-top: 25px;
 }
 
-.reveal.slide {
-    padding-bottom: 100px;
-    top: -20%;
-    /*width:1000px;*/
+table {
+  border: 2px solid #dddddd;
+  margin-top: 35px;
+}
+
+th {
+  font-size: 0.9em;
+}
+
+.winners{
+  margin: 35px auto;
+  width: 66%;
+}
+
+.modal-body {
+  text-align: center;
 }
 
 .header {
@@ -49,21 +61,20 @@ body {
 }
 
 .banner {
-  background-image: url("jumbotron.jpg");
+  background-image: url("../../images/jumbotron.jpg");
   background-position: center;
   background-size: cover;
 }
 
-/* Moved to body selector
-.wrapper {
-  margin: 0 auto;
-}
-
 .container {
-  max-width: 810px;
+  max-width: 960px;
 }
-*/
 
 .title {
   font-family: "Share", serif;
+}
+
+.modalBtn {
+  height: 75px;
+  width: 75px;
 }
