--- a/app/views/randomizer.html
+++ b/app/views/randomizer.html
@@ -1,12 +1,12 @@
 <!--
-HTML template for the customers component.
+HTML template for the participants table.
 -->
 
 <!-- The list of customers, divided into a header and a body -->
-<section class="randomWinnerApp">
+<section class="participantsTable">
 
   <!-- The list of customers, displayed in a table -->
-  <section class="winners">
+  <section class="surveyParticipants">
     <div class="row">
       <div class="col-xs-12">
 
